# minha-receita

./: .gitignore  README.md  main.py  minha_receita.py  pyproject.toml  settings.py
core/handlers/requests_handlers/: login_handler.py  meus_dados_handlers.py  nota_handlers.py
tests/: test_minha_receita.py  test_notas_emitidas.py
